// Copyright 2019 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Extension for specifying which field in a message is to be considered an
// entity key, for the purposes associating gRPC calls with entities and
// sharding.

syntax = "proto3";

package cloudstate.proxy;

import "google/protobuf/any.proto";
import "cloudstate/entity.proto";
import "scalapb/scalapb.proto";

option java_package = "io.cloudstate.proxy.entity";
option (scalapb.options) = {
    flat_package: true
};

message EntityCommand {
    string entity_id = 1;
    string name = 2;
    google.protobuf.Any payload = 3;
    bool streamed = 4;
    cloudstate.Metadata metadata = 5;
}

message UserFunctionReply {
    ClientAction client_action = 1;
    repeated cloudstate.SideEffect side_effects = 2;
}